tests/cases/positive/typing/grading/oneUseVarUsed.lam
-- we specify the variable should be used once, and indeed we use it
test : (l : [succ zero, zero] Level) -> Level
test = \l -> l
